--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ font-family: "Raleway", sans-serif;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
+    
     color: #2e2f42;
     text-transform: capitalize;
 }
@@ -106,8 +106,8 @@ font-family: "Raleway", sans-serif;
 .section-team{
     background-color: #f4f4fd;
 }
-.list{
-    background-color: #ffffff;
+.list-team{
+    background-color: #FFFFFF;
 }
 .section-team-title{
     
@@ -115,7 +115,7 @@ font-family: "Raleway", sans-serif;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        text-align: center;
+        
         color: #2e2f42;
 }
 
@@ -125,7 +125,7 @@ font-family: "Raleway", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
+    
     color: #434455;
 }
 .section-portfolio-title{
