--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,8 @@ font-family: "Raleway", sans-serif;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        
         color: #2e2f42;
+        text-align: center
 }
 
    .section-team-text{
@@ -133,6 +133,7 @@ font-family: "Raleway", sans-serif;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center
 }
 .section-portfolio-text{
 
@@ -141,6 +142,7 @@ font-family: "Raleway", sans-serif;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+
 }
 .down{
     background-color: #2e2f42;
