--- a/css/styles.css
+++ b/css/styles.css
@@ -106,15 +106,17 @@ font-family: "Raleway", sans-serif;
 .section-team{
     background-color: #f4f4fd;
 }
-
+.list-team{
+    background-color: #FFFFFF;
+}
 .section-team-title{
     
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        
         color: #2e2f42;
-        text-align: center
 }
 
    .section-team-text{
@@ -133,7 +135,6 @@ font-family: "Raleway", sans-serif;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    text-align: center
 }
 .section-portfolio-text{
 
@@ -142,7 +143,6 @@ font-family: "Raleway", sans-serif;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-
 }
 .down{
     background-color: #2e2f42;
