--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ font-family: "Raleway", sans-serif;
 .down{
     background-color: #2e2f42;
 }
-.inform{
+.informe{
     
         font-weight: 400;
         font-size: 16px;
